--- a/src/Components/Pages/Getpampered/getpampered.css
+++ b/src/Components/Pages/Getpampered/getpampered.css
@@ -25,7 +25,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: url('./Mask\ group.svg');
+    background-image: url('../../wedbg.svg');
 }
 
 .getpamtitle2{
