--- a/src/Components/Pages/Faq/Faq.css
+++ b/src/Components/Pages/Faq/Faq.css
@@ -14,6 +14,10 @@
 
 .faq-inner{
   width: 95%;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; */
 
 }
 
