--- a/src/Components/Pages/terms/terms.css
+++ b/src/Components/Pages/terms/terms.css
@@ -21,8 +21,12 @@
     width: 80%;
     flex-direction: column;
     /* border:1px solid black; */
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.71);
-    border-radius: 20px;
+    background: rgba( 255, 255, 255, 0.1 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 7.5px );
+    -webkit-backdrop-filter: blur( 7.5px );
+    border-radius: 40px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     padding: 20px;
     margin-bottom: 20px;
 }
