--- a/src/Components/Landing/TestiCaro.css
+++ b/src/Components/Landing/TestiCaro.css
@@ -7,22 +7,23 @@
 
 }
 .carousel-inner{
-
-   
-    width: 100%;
-   
+    width: 90%;
 }
-
 .carousel-item{
     height: 100%;
-    /* justify-content: center ;
-    align-items: center; */
+    width: 100%;
 }
 
+/* .active{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
 
 
 .carousel-item>div{
    height: 100%;
+  
    display: flex;
    justify-content: center;
    align-items: center;
