--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -79,7 +79,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
-font-size: 18px;
+    font-size: 18px;
 }
 
 .wedsec2cont{
@@ -110,6 +110,7 @@ font-size: 18px;
 .weddingt2{
     font-family: 'Poppins', sans-serif;
     font-size: 35px;
+    color:#270641;
     /* align-self: flex-start; */
 }
 
