color everything purple

--- a/src/Components/Feedback/feedback.css
+++ b/src/Components/Feedback/feedback.css
@@ -150,6 +150,7 @@
 
 .feedbrateddivinner span{
     width: 200px;
+    color:#270641;
 }
 
 .innerradfeed{
@@ -164,6 +165,7 @@
 
 .totalrating{
     margin-top: 30px;
+    color:#270641;
 }
 
 .feedbacksubbtn{
