--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -98,6 +98,7 @@
 .box1 p{
     text-align: center;
     font-size: 18px;
+    color:#270641;
     /* margin-top: 20px; */
 }
 
@@ -162,6 +163,7 @@
 .sec4abtus p{
     text-align: center;
     margin-bottom: 20px;
+    color: #270641;
 }
 
 .abtussmallcaro{
@@ -188,6 +190,7 @@
 .abtus5titlesub{
     font-size: 45px;
     font-weight: 600;
+    color: #270641;
 }
 
 .divimg{
