--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -103,6 +103,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 20px;
+    color:#270641;
 }
 
 
@@ -125,6 +126,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 50px;
+    color:#270641;
 }
 
 .steps{
