--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -10,6 +10,7 @@
     background-repeat:no-repeat;
     background-position: center ;
     background-size: contain;
+  
 }
 
 .weddingbannerinner{
@@ -66,6 +67,7 @@
 
 .wedsec1img{
     width: 30%;
+  
 }
 
 .wedsec1 img{
@@ -80,6 +82,8 @@
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
+    color:#270641;
+  
 }
 
 .wedsec2cont{
@@ -92,6 +96,8 @@
     align-items: flex-end;
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
+    color:#270641;
+  
 
 }
 
@@ -104,6 +110,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    color:#270641;
 }
 
 
@@ -117,6 +124,7 @@
 .datewidth{
     width: 500px;
     margin-top: 30px;
+    color:#270641;
 }
 
 .weddingbookbtn{
@@ -127,10 +135,12 @@
     padding: 10px 40px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
 }
 
 .weddingforms{
     margin-bottom: 100px;
+    color:#270641;
 }
 
 .weddingbg{
@@ -139,4 +149,5 @@
     background-size: cover;
     background-position: right;
     width:100%;
+  
 }
