--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -1,7 +1,7 @@
 .weddingbanner{
-    height: 600px;
-    width: 100%;
-    background-image: url('https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20768.png?alt=media&token=f57e42f0-c5d1-45f6-9c13-a4171e71ace8');
+    /* height: 600px;
+    width: 100%; */
+    /* background-image: url('https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20768.png?alt=media&token=f57e42f0-c5d1-45f6-9c13-a4171e71ace8'); */
     display: flex;
     background-color: #270641;
     align-items: center;
