--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -6,11 +6,11 @@
     /* background-color: #DDFDFF; */
 }
 .contactbanner{
-    height: 500px;
+    /* height: 500px; */
     overflow: hidden;
-    width: 100%;
+    /* width: 100%; */
     background-color: #270641;
-    background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20720.png?alt=media&token=246930de-5f92-4014-b256-93983bcd27d1");
+    /* background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20720.png?alt=media&token=246930de-5f92-4014-b256-93983bcd27d1"); */
     display: flex;
     background-repeat: no-repeat;
     background-size: contain;
