--- a/src/Components/Pages/GalleryCaro.css
+++ b/src/Components/Pages/GalleryCaro.css
@@ -24,7 +24,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-bottom: 20px;
     height: 612px;
   }
