--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -13,7 +13,7 @@
     /* background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20720.png?alt=media&token=246930de-5f92-4014-b256-93983bcd27d1"); */
     display: flex;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     align-items: center;
     justify-content: center;
@@ -77,7 +77,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 620px;
+    height: 630px;
     width: 40%;
     background-color: #4C2A76;
     padding: 20px;
@@ -87,7 +87,7 @@
 }
 
 .mainsectionright{
-    height: 675px;
+    height: 680px;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -119,6 +119,7 @@
     height: 55.85px;
     color: #FFB8BC;
     font-size: 20px;
+    margin-top: 5px;
 }
 
 .msl1{
