--- a/src/Components/Pages/fabrics/Fabrics.css
+++ b/src/Components/Pages/fabrics/Fabrics.css
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  margin-bottom: -50px;
 }
 
 .fabricsheader{
@@ -29,7 +30,7 @@
   align-items: center;
   background-color: #270641;
   margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding: 30px;
 }
 
@@ -40,13 +41,14 @@
 }
 
 .fabricsheader2{
-  margin-top: 70px;
+  margin-top: 40px;
   width: 100%;
-  font-size: 40px;
+  font-size: 45px;
   font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Poppins', sans-serif;
 }
 
 .textcontainer{
@@ -77,7 +79,7 @@
   display: flex;
   flex-direction: column;
   width: 70%;
-  margin-top: 90px;
+  margin-top: 10px;
 }
 
 .imgfabrow1 img{
@@ -89,7 +91,7 @@
   display: flex;
  
   align-items: center;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .imgfabrowinner{
@@ -110,7 +112,7 @@
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
-  margin-top: 20px;
+  margin-top: 30px;
   text-align: right;
 
 }
