14 nov amudha mam changes

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -52,6 +52,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: 'Poppins', sans-serif;
 }
 
 .abtussec2{
@@ -73,6 +74,7 @@
 .sec2t11{
     font-weight: 400;
     color: #270641;
+    font-family: 'Poppins', sans-serif;
 
 }
 
@@ -97,15 +99,16 @@
 
 .box1 p{
     text-align: center;
-    font-size: 18px;
+    font-size: 22px;
     color:#270641;
+    font-family: 'Poppins', sans-serif;
     /* margin-top: 20px; */
 }
 
 .rect
 {
-    width: 84px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
     background: #4C2A76;
     border-radius: 22px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -116,6 +119,11 @@
    
 }
 
+.rect>img{
+    width: 84px;
+    height: 80px;
+}
+
 
 
 .sec3abtus{
@@ -124,7 +132,8 @@
     justify-content: center;
     align-items: center;
     width: 80%;
-    margin-bottom: 80px;
+    margin-bottom: 70px;
+    margin-top: 70px;
 }
 
 .lsec3{
@@ -140,6 +149,8 @@
 {
     width: 50%;
     padding: 50px;
+    
+    font-family: 'Poppins', sans-serif;
 }
 
 .sec4abtus
@@ -157,7 +168,7 @@
   
     color: #270641;
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
 }
 
 .sec4abtus p{
@@ -191,6 +202,7 @@
     font-size: 45px;
     font-weight: 600;
     color: #270641;
+    
 }
 
 .divimg{
@@ -200,8 +212,9 @@ margin-bottom: 50px;
 }
 
 .CCC{
-    font-size: 32px;
+    
     margin-top: 80px;
+    font-weight: 600;
 
 }
 
@@ -209,6 +222,7 @@ margin-bottom: 50px;
     margin-top: 20px;
     text-align: center;
     margin-bottom: 40px;
+    font-size: 1.5rem;
 }
 
 .getintouch{
