--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -6,15 +6,15 @@
     /* background-color: #DDFDFF; */
 }
 .contactbanner{
-    /* height: 500px; */
+
     overflow: hidden;
-    /* width: 100%; */
-    background-color: #270641;
-    /* background-image: url("https://firebasestorage.googleapis.com/v0/b/teenz-fe41d.appspot.com/o/Group%20720.png?alt=media&token=246930de-5f92-4014-b256-93983bcd27d1"); */
+
+    /* background-color: #270641; */
+   
     display: flex;
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
+    background-position: center center;
     align-items: center;
     justify-content: center;
 }
@@ -87,7 +87,7 @@
 }
 
 .mainsectionright{
-    height: 675px;
+    height: 670px;
     width: 40%;
     display: flex;
     flex-direction: column;
