--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -1,5 +1,6 @@
 .imagecons{
     height: 100%;
+    font-family: 'Poppins', sans-serif;
 }
 
 .topbar{
@@ -50,19 +51,24 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 8px;
+    width: 80%;
 }
 .icon-holder{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    width:200px;
+    width:100%;
     margin-top: 40px;
+}
+.icon-holder >img{
+    height: 160px;
+    width: 160px;
 }
 .icon-holder >span{
     
     /* line-height: 34px; */
-    font-size: 16px;
+    font-size: 22px;
     color: #270641;
     font-family: 'Poppins', sans-serif;
     /* font-size: 0.9rem; */
@@ -98,12 +104,12 @@
 .img-row1>p{
     display: flex;
     width: 50%;
-    font-size: 1.2rem;
-
+    font-size: 1.5rem;
     justify-content: center;
     align-items: center;
     margin-left: 20px;
     color:#270641;
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -122,7 +128,7 @@
     display: flex;
     width: 56%;
     font-size: 1.5rem;
-
+    font-family: 'Poppins', sans-serif;
     justify-content: center;
     align-items: center;
     margin-left: 50px;
