--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -34,7 +34,7 @@
 
 .wb2{
     font-family: 'Poppins', sans-serif;
-    font-size: 17px;
+    font-size: 1.5rem;
     text-align: center;
     color: #FFB8BC;
     margin-top: 20px;
@@ -47,6 +47,8 @@
     display: flex;  
     width: 80%;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
     /* margin-top: 100px; */
     /* justify-content: space-evenly; */
 
@@ -55,6 +57,8 @@
 .wedsec2{
     display: flex;  
     width: 80%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
     align-items: center;
     flex-direction: row-reverse;
    
@@ -76,12 +80,13 @@
 }
 
 .wedsec1cont{
-    width: 40%;
+    width: 45%;
     margin-left: 80px;
     display: flex;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
-    font-size: 18px;
+ 
+    font-size: 1.5rem;
     color:#270641;
   
 }
@@ -94,7 +99,7 @@
     text-align: right;
     flex-direction: column;
     align-items: flex-end;
-    font-size: 18px;
+    font-size: 1.5rem;
     font-family: 'Poppins', sans-serif;
     color:#270641;
   
