--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -51,12 +51,12 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 8px;
-    width: 80%;
+    width: 100%;
 }
 .icon-holder{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     width:100%;
     margin-top: 40px;
@@ -66,14 +66,9 @@
     width: 160px;
 }
 .icon-holder >span{
-    
-    /* line-height: 34px; */
     font-size: 22px;
     color: #270641;
     font-family: 'Poppins', sans-serif;
-    /* font-size: 0.9rem; */
-    /* font-weight: 600; */
-    /* margin-top: 10px; */
     text-align: center;
 }
 
@@ -148,76 +143,96 @@
     
 }
 
-.imageform{
-    /* margin-left: 50px; */
-    width: 80%;
-    margin-bottom: 0;
-}
 
 
 
 
 
-
-@media only screen and (max-width:650px) {
+@media only screen and (max-width:700px) {
     .icon-holder{
-        
-        width:120px;
-
+        margin: 5px;
     }
-
     .icon-holder>img{
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
     }
-    .icon-holder >p{
-    
-        font-size: 0.8rem;
-    
+    .icon-holder >span{
+        font-size: 0.9rem;
     }
-    .img-row>img{
 
-        width: 150px;
-        height: 150px;
-        object-fit: cover;
-        border-radius: 40px;
+    .icons{
+        align-items: flex-start;
     }
-    
-    .img-row>p{
+    .img-row1{
         display: flex;
-        width: 50%;
-        font-size: 0.8rem;
-        font-weight: 600;
         justify-content: center;
         align-items: center;
-        margin-left: 20px;
-}
-    .steps >img{
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .img-row1>p{
+        display: flex;
+        width: 90%;
+        font-size: 1.3rem;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0px;
+        margin-top: 40px;
+        color:#270641;
+        margin-right: 0px !important;
+        font-family: 'Poppins', sans-serif;
+       
+    }
+    .img-row{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .img-row>img{
         width: 300px;
+        height: 400px;
+        object-fit: cover;
+        border-radius: 20px;
+    }
+
+    .img-row>p{
+        display: flex;
+        width: 90%;
+        font-size: 1.3rem;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0px;
+        margin-top: 40px;
+        color:#270641;
+        margin-right: 0px !important;
+        font-family: 'Poppins', sans-serif;
+    }
+    .steps{
+        width: 100%;
+        padding: 5px;
+    }
+    .steps>a>img{
+        width: 180px;
+        height: 70px;
+    }
+    .steps >img{
+        width: 100%;
+        height: 120px;
+    }
+    .steps{
+        width: 100%;
+    }
+    .steps1>img{
+        width: 100%;
+        height: 120px;
+        padding: 5px;
     }
     
 }
 
 
 
-@media only screen and (max-width:800px) {
-    .steps >img{
-        width: 600px;
-    }
-}
-
-@media only screen and (max-width:600px) {
-    .steps >img{
-        width: 800px;
-        height: 70px;
-    }
-
-    .imageform{
-        margin-left: 20px;
-        width:90%;
-
-    }
-    .image-textfield{
-        width:300px !important;
-    }
-}
