--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -156,7 +156,11 @@
   
 }
 
-@media screen and (max-width: 700px){
+.caroimg2{
+    display: none;
+}
+
+@media screen and (max-width: 950px){
 
     .wedsec1{
         display: flex;  
@@ -216,5 +220,26 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+    }
+   
+    
+}
+
+@media screen and (max-width: 600px){
+    .caroimg1{
+        display: none;
+    }
+    .caroimg2{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 95%;
+        height:95%;
+       
+        object-position: center;
+        object-fit: contain;
+    }
+    .weddingbanner{
+        min-height: 600px !important;
     }
 }
