--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -118,7 +118,6 @@
 
 
 }
-
 .img-row>p{
     display: flex;
     width: 56%;
@@ -142,6 +141,8 @@
     width: 1400px;
     
 }
+
+
 
 
 
@@ -233,6 +234,76 @@
     }
     
 }
+
+
+
+
+@media screen and (max-width: 950px){
+
+    .wedsec1{
+        display: flex;  
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+       
+        
+    }
+    
+    .wedsec2{
+        display: flex;  
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        
+    }
+
+        
+    .wedsec2 img{
+        height: auto;
+        width: 350px;
+    }
+
+    .wedsec1img{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+    }
+
+    .wedsec1 img{
+        height: auto;
+        width: 350px;
+    }
+
+    .wedsec1cont{
+        width:90%;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        justify-content: center;
+        align-items:center  ;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-left: 0;
+
+    }
+
+    .wedsec2cont{
+        width:90%;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        justify-content: center;
+        align-items:center  ;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+   
+    
+}
+
+
 
 
 
