--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -6,17 +6,18 @@
     /* background-color: #DDFDFF; */
 }
 .contactbanner{
-
     overflow: hidden;
-
-    /* background-color: #270641; */
-   
+    background-color: #270641 !important;
     display: flex;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
+    background-size: cover;
+    background-position: center ;
     align-items: center;
     justify-content: center;
+
+}
+.contactbanner>img{
+    object-position: center;
 }
 
 .contactbannerinner{
@@ -87,7 +88,7 @@
 }
 
 .mainsectionright{
-    height: 670px;
+    height: 668px;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -183,7 +184,19 @@
 }
 
 
+
+.contactbanner>div{
+    display: none;
+}
+
+
 @media screen and (max-width: 800px) {
+    .contactbanner>div{
+        display: block;
+    }
+    .contactbanner>img{
+        display: none;
+    }
     .mainsection{
         height: 100%;
         display: flex;
@@ -227,6 +240,15 @@
         height: 45px;
         margin-top: -20px;
     }
+
+    .contactbanner{
+        height: 300px !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    
     
 
   }
