--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -151,7 +151,6 @@
   @media screen and (max-width: 500px) {
     .footerinnercontainer{
         padding: 1px;
-        
         margin-left: 10px;
         margin-right: 10px;
     }
@@ -175,12 +174,21 @@
 
         margin: 0px;
     }
+
+    .footerinnercontainer > div{
+        padding: 1px;
+    }
+
+    .copy{
+   
+        margin-top: 0px;
+    }
   }
 
 
   @media screen and (max-width: 700px) {
     .footercontainer{
-        height: 100%;
+        height: 100vh;
         background-color: #270641;
         overflow: hidden;
         width: 100%;
@@ -199,5 +207,12 @@
         align-items: flex-start;
         flex-direction: column;
     }
+
+    .copy{
+        bottom: 0;
+        font-size: 15px !important;
+        margin-top: 5px;
+    }
+    
   }
   
