--- a/src/Components/Productpage/ProductMessgage/Productmsg.css
+++ b/src/Components/Productpage/ProductMessgage/Productmsg.css
@@ -13,19 +13,21 @@
 }
 
 .productmsgcont{
-    height: 500px;
+    height: 100%;
+    /* height: 500px; */
     width: 500px;
     background-color: #4C2A76;
     margin-top: 60px;
     margin-bottom: 60px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(5px);
     border-radius: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
 }
 
 .prodmsgt1{
@@ -154,4 +156,35 @@ cursor: pointer;
 .prodmsgtext3{
     margin-top: 10px;
     color: #FFB8BC;
+}
+
+@media only screen and (max-width:700px)
+{
+    .prodmsgt1{
+        margin-top: 20px;
+        color: #FFB8BC;
+        font-size: 27px;
+        font-weight: 600;
+        text-align: center;
+    }
+    
+    .prodmsgt2{
+        /* margin-top: 0px; */
+        color: #FFB8BC;
+        font-size: 20px;
+        font-weight: 400;
+        text-align: center;
+        margin-top: 20px;
+
+    }
+
+
+.prodmsgt3{
+    margin-top: 30px;
+    font-size: 17px;
+    font-weight: 400;
+    color: #FFB8BC;
+    text-align: center;
+
+}
 }
