--- a/src/Components/Productpage/Productpage.css
+++ b/src/Components/Productpage/Productpage.css
@@ -38,6 +38,7 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+ 
     /* margin-bottom: 60px; */
 
 }
@@ -111,4 +112,110 @@
     width: 420px;
     height: 500px;
     border-radius: 20px;
+}
+
+@media only screen and (max-width:1024px) {
+    .mainimg{
+        width: 320px;
+        height: 400px;
+        border-radius: 20px;
+    }
+
+    .imgselection img{
+        height: auto;
+        width: 60px;
+        margin-top: 20px;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width:700px)  {
+
+    .productname{
+        margin-top: 30px;
+    }
+
+    .internationaldelivery{
+        margin-top: 20px;
+        color: #4C2A76;
+        text-align: center;
+    }
+
+    .producttabs{
+        text-align: center;
+    }
+
+    .resclass{
+        justify-content: center !important; 
+    }
+
+    .mainimg{
+        width: 240px;
+        height: 320px;
+        border-radius: 20px;
+    }
+
+    .imgselection img{
+        height: auto;
+        width: 50px;
+        margin-top: 20px;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+    .productspages{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: space-evenly;
+        padding-bottom: 40px;
+        padding-top: 30px;
+        background-image: url('../About/bg.svg');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        height: 100%;
+        align-items: center;
+    }
+
+    .prodpagedatasection
+    {
+    width: 96%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin-bottom: 60px; */
+    }
+
+    .responsiveTitle{
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;
+    }
+
+    .productname{
+        display: none;
+    }
+
+    .productprice{
+        display: none;
+    }
+
+    .productname1{
+        display: block;
+        font-weight: bold;
+        font-family: 'Poppins', sans-serif;
+        font-size: 35px;
+    }
+
+    .productprice1{
+        display: block;
+        font-weight: 500;
+        color: #7026A0;
+        font-size: 30px;
+    }
+
+    .productdescription{
+        text-align: center;
+    }
 }
