--- a/src/Components/DesignerCollections/DesignerCollections.css
+++ b/src/Components/DesignerCollections/DesignerCollections.css
@@ -183,7 +183,7 @@
         z-index: 10 !important;
         width: 230px !important;
         height: 100% !important;
-        overflow-x: visible !important;
+        overflow-x: scroll;
         background: rgba(221, 253, 255) !important;;
         box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
         padding: 30px;
@@ -211,6 +211,19 @@
     .prodpaget2{
         font-size: 15px !important;
         /* font-weight: 600; */
+    }
+
+    .prodpage{
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        /* overflow-x: scroll; */
+        background-image: url('../About/bg.svg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
     }
 
     .prodcard{
