--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -112,3 +112,51 @@
     
     }
 }
+
+@media only screen and (max-width:1252px)
+{
+    .servcaro{
+        margin-top: 40px;
+        width: 85%;
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+    .servcaro img{
+        height: auto;
+        width: 240px !important;
+        margin-bottom: 10px;
+    }
+
+    .removemargin{
+        margin-top: 0px !important;
+    }
+
+    .landser{
+        margin-top: 50px !important;
+
+    }
+
+    .landser2{
+        margin-top: 50px !important;
+    }
+
+    .Landingtesti{
+        margin-top: 50px !important;
+
+    }
+
+    .landiconsdiv{
+        flex-wrap: wrap !important; 
+    }
+
+    .givenmargin{
+        margin-top: 10px;
+    }
+
+    .landtit{
+        font-size: 40px;
+        text-align: center;
+    }
+}
