--- a/src/Components/Landing/TestiCaro.css
+++ b/src/Components/Landing/TestiCaro.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Poppins';
 
 }
 .carousel-inner{
@@ -14,11 +15,6 @@
     width: 100%;
 }
 
-/* .active{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 
 .carousel-item>div{
@@ -76,4 +72,93 @@
 
 .carousel-control-next{
     width: 2%;
+}
+
+@media screen and (max-width: 600px) {
+    .carousel{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    .carousel-inner{
+        width: 90%;
+    }
+    .carousel-item{
+        height: 100%;
+        width: 100%;
+    }
+
+    
+    
+    .carousel-item>div{
+       height: 100%;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    }
+    
+    .carousel-item>div>div{
+        margin-left: 20px;
+    }
+    
+    
+    .carousel-item>div>div>p{
+        color:#FFB8BC;
+        font-size: 25px;
+        font-weight: 500;
+        font-style: italic;
+        
+    
+    }
+    .carousel-item>div>div>h4{
+        color:#FFB8BC;
+        font-size: 30px;
+        font-weight: 400;
+        margin-left: 5px;
+    }
+
+    .carousel-item>div>div>p{
+        color:#FFB8BC;
+        font-size: 25px;
+        font-weight: 400;
+        margin-left: 5px;
+    }
+    
+    .Landingtesti{
+        font-family: 'Poppins', sans-serif;
+        font-size: 35px;
+        margin-top: 100px;
+        text-align: center;
+       
+    }  
+    .testcont{
+        margin-top: 40px;
+        width: 95%;
+        margin: 20px;
+        border-radius: 40px;
+        height: 300px;
+        padding: 10px;
+        
+    }
+   
+
+    .carousel-item>div>img{
+        width: 115px !important;
+        height: 400px !important; 
+    }
+    .carousel-item>div>div>h4{
+        font-size: 18px !important;
+    }
+
+    .carousel-control-prev{
+        width: 1%;
+    
+    } 
+    .carousel-control-next{
+        width: 1%;
+    }
+    
 }
