--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -46,7 +46,7 @@
 }
 
 .navicons{
-    width: 150px;
+    width: 320px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -70,8 +70,75 @@
     cursor: pointer;
 }
 
+.hamburger{
+    display: none;
+}
+
+.sidenavbarcustom{
+    position: fixed;
+    right: -250px;
+    top: 0;
+    width: 250px;
+    background-color: #DDFDFF;
+    z-index: 10;
+    height: 100vh;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* padding: 20px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: right 0.5s ease; 
+
+    
+}
+
+.showsidenav{
+    right: 0px !important; 
+    transition: right 0.5s ease; 
+}
+
+
+.sidebarlinks{
+    font-weight: 500;
+    margin: 10px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.slidebarlogo{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+
+}
+
+.slidebarlogo img{
+    height: auto;
+    width: 170px;
+    margin-top: 40px;
+}
+
+.closearrow{
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 50%;
+    margin-top: 30px;
+    align-self: flex-start;
+    margin-left: 30px;
+}
 
 @media screen and (max-width: 600px) {
+
+
+
+  
+
     .navoptions span{
         padding: 2px;
     }
@@ -80,10 +147,14 @@
         letter-spacing: 5px;
     }
     
+    .fa-magnifying-glass{
+        display: none;
+    }
 
     .navicons{
         font-size: 15px;
-        width: 100px;
+        width: 150px;
+        display: none;
     }
 
     .navlogocontainer>img{
@@ -112,4 +183,9 @@
     .Typewriter__wrapper{
         font-size: 10px;
     }
+
+    .hamburger {
+        display: block;
+    }
 }
+
